# UnlearnArena

./: .gitignore  README.md  pyproject.toml
src/unlearnarena/: __init__.py  answer_extraction.py  data.py  diagnostics.py  models.py  scoring.py
src/unlearnarena/attacks/: __init__.py  calibration.py  cot.py  mcq.py  probe.py  rebel.py  relearn.py
src/unlearnarena/cli/: eval_checkpoint.py  sweep_checkpoints.py
tests/: test_cot.py  test_diagnostics.py  test_scoring.py
